Rework permissions system

--- a/doc/metadb.adoc
+++ b/doc/metadb.adoc
@@ -5,6 +5,7 @@
 // Text is styled using "pre-wrap" and wrapped at column 70.
 
 = Metadb Documentation
+:icons: font
 :sectnums:
 :sectnumlevels: 4
 :toc: left
@@ -16,7 +17,5 @@ include::userguide.adoc[]
 include::reference.adoc[]
 
 include::serveradmin.adoc[]
-
-// include::transform.adoc[]
 
 include::externalproj.adoc[]
