--- a/doc/externalproj.adoc
+++ b/doc/externalproj.adoc
@@ -690,12 +690,8 @@ CREATE DATA ORIGIN tenant2;
 CREATE DATA ORIGIN tenant3;
 ----
 
-.Note
-****
-[.text-center]
-CREATE DATA ORIGIN currently requires restarting the server before it
-will take effect.
-****
+NOTE: CREATE DATA ORIGIN currently requires restarting the server
+before it will take effect.
 
 Then use the `module 'reshare'` option when creating the data source,
 and set `addschemaprefix` to add a `reshare_` prefix to the schema
