--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -158,11 +158,11 @@ continuing.
 
 === Backups
 
-*It is essential to make regular backups of Metadb and to test the
- backups.*
+IMPORTANT: It is essential to make regular backups and to test the
+backups.
 
-In general persistent data are stored in the database, and so the
-database should be backed up often.
+Most persistent data are stored in the database, and so the database
+should be backed up often.
 
 The data directory contains the `metadb.conf` configuration file and
 is also used for temporary storage.  The `metadb.conf` file should be
@@ -488,6 +488,9 @@ source.
 
 === Creating database users
 
+[discrete]
+==== With the CREATE USER command
+
 To create a new database user account:
 
 [source]
@@ -495,30 +498,29 @@ To create a new database user account:
 CREATE USER wegg WITH PASSWORD 'LZn2DCajcNHpGR3ZXWHD', COMMENT 'Silas Wegg';
 ----
 
-In addition to creating the user, this also creates a schema with the
-same name as the user.  The schema is intended as a workspace for the
-user.
+In addition to creating the user, this also registers the user with
+the Metadb instance.  It also creates a schema with the same name as
+the user, which is intended as a workspace for the user.
 
 .Recommendations:
 * Each user account should be for an individual user and not shared by
   more than one person.
 * Prefer user names of 3 to 8 characters in length.
 
-By default the user does not have access to data tables.  To give the
-user access to all tables generated from a data source (including
-tables not yet created):
+[discrete]
+==== Granting access to data
 
-[source]
-----
-AUTHORIZE SELECT ON ALL TABLES IN DATA SOURCE sensor TO wegg;
-----
+A new user has very limited access to data.  To add privileges for
+tables and functions, use the GRANT command (or AUTHORIZE in Metadb
+1.3 and earlier).
 
-.Note
-****
-[.text-center]
-AUTHORIZE currently requires restarting the server before it will take
-effect.
-****
+[discrete]
+==== Registering an existing user and creating a user schema
+
+As an alternative to CREATE USER, if a user already exists in the
+database system, it can be enabled to work with the Metadb database
+via the command REGISTER USER.  A user schema can then be created with
+CREATE SCHEMA FOR USER.
 
 === Administrative database changes
 
@@ -527,21 +529,21 @@ underlying PostgreSQL database, such as providing additional tables
 for users.  However, the following guidelines should be followed
 strictly to avoid disrupting the operation of Metadb:
 
-1. No changes should be made to any database objects created by
-Metadb.  If it should become necessary to make changes to the database
-objects at the request of the Metadb maintainers, the server should be
-stopped first to prevent it from operating with an out-of-date cache.
-If changes are made to the database objects inadvertently, the server
-should be stopped as soon as possible and not started until the
-changes have been reversed.
+1. No changes should be made to any database objects created or
+managed by Metadb.  If it should become necessary to make changes to
+the database objects at the request of the Metadb maintainers, the
+server should be stopped first to prevent it from operating with an
+out-of-date cache.  If changes are made to the database objects
+inadvertently, the server should be stopped as soon as possible and
+not started until the changes have been reversed.
 
-2. Changes generally should be made while logged in as a new database
-user (not a superuser) that is created specifically for that purpose.
-
-3. Any new database objects should be created in a new schema that
+2. Any new database objects should be created in a new schema that
 will not coincide with a schema that may be created by Metadb.  This
 can be ensured by always setting `addschemaprefix` in data source
 configurations and avoiding names with those prefixes when creating a
 new schema.
 
-4. Database views should not be created in the database.
+3. Database views should not be created in the database.
+
+IMPORTANT: Making changes to Metadb-managed data or schemas may cause
+data corruption.
