--- a/doc/externalproj.adoc
+++ b/doc/externalproj.adoc
@@ -609,19 +609,19 @@ Metadb.
 ==== Configuring Metadb for FOLIO
 
 When creating a FOLIO data source, use the `module 'folio'` option,
-and set `trimschemaprefix` to remove the tenant from schema names and
-`addschemaprefix` to add a `folio_` prefix to the schema names.  For
-example:
+and set `trim_schema_prefix` to remove the tenant from schema names
+and `add_schema_prefix` to add a `folio_` prefix to the schema names.
+For example:
 
 ----
 CREATE DATA SOURCE folio TYPE kafka OPTIONS (
     module 'folio',
-    trimschemaprefix 'tenantname_',
-    addschemaprefix 'folio_',
+    trim_schema_prefix 'tenantname_',
+    add_schema_prefix 'folio_',
     brokers 'kafka:29092',
     topics '^metadb_folio_1\.',
-    consumergroup 'metadb_folio_1_1',
-    schemastopfilter 'admin'
+    consumer_group 'metadb_folio_1_1',
+    schema_stop_filter 'admin'
 );
 ----
 
@@ -710,21 +710,21 @@ NOTE: CREATE DATA ORIGIN currently requires restarting the server
 before it will take effect.
 
 Then use the `module 'reshare'` option when creating the data source,
-and set `addschemaprefix` to add a `reshare_` prefix to the schema
+and set `add_schema_prefix` to add a `reshare_` prefix to the schema
 names:
 
 ----
 CREATE DATA SOURCE reshare TYPE kafka OPTIONS (
     module 'reshare',
-    addschemaprefix 'reshare_',
+    add_schema_prefix 'reshare_',
     brokers 'kafka:29092',
     topics '^metadb_reshare_1\.',
-    consumergroup 'metadb_reshare_1_1',
-    schemastopfilter 'admin'
+    consumer_group 'metadb_reshare_1_1',
+    schema_stop_filter 'admin'
 );
 ----
 
-Note that unlike with FOLIO, here we do not use `trimschemaprefix`,
+Note that unlike with FOLIO, here we do not use `trim_schema_prefix`,
 because the "reshare" module uses the tenant name in the prefix to
 choose a configured data origin, as described above.
 
