--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -11,11 +11,12 @@
 
 * Operating system: Linux
 * Database system: https://www.postgresql.org/[PostgreSQL] 15 or later
-* To build from source:
+* To build from source, these have to be installed:
 ** https://go.dev/[Go] 1.24 or later
 ** https://www.colm.net/open-source/ragel/[Ragel] 6
 ** https://gcc.gnu.org/[GCC C compiler] 9 or later
-** https://www.gnu.org/software/bash/[bash]
+** https://pkg.go.dev/golang.org/x/tools/cmd/goyacc[goyacc] (required
+   for Metadb 1.3 or earlier; see installation instructions below)
 
 ==== PostgreSQL configuration
 
@@ -49,8 +50,16 @@ specify a path that can serve as the build workspace for Go, e.g.:
 export GOPATH=$HOME/go
 ----
 
-Clone the repository and check out the `latest` tag, which retrieves
-the latest stable version:
+For Metadb 1.3 or earlier, install goyacc:
+
+----
+go install golang.org/x/tools/cmd/goyacc@master
+
+export PATH=$PATH:$GOPATH/bin
+----
+
+Now we can clone the Metadb source code repository and check out the
+`latest` tag, which retrieves the latest stable version:
 
 ----
 git clone https://github.com/metadb-project/metadb.git -b latest
@@ -62,15 +71,17 @@ Or alternatively specify a desired version, for example:
 git clone https://github.com/metadb-project/metadb.git -b v1.4.0
 ----
 
-Then build the server:
+Then compile the server by running the build script:
 
 ----
 cd metadb
 
-./build
+./build.sh
 ----
 
-The `build` script creates a `bin/` subdirectory and builds the
+NOTE: In Metadb 1.4, `build.sh` has been renamed to `build`.
+
+The build script creates a `bin/` subdirectory and creates the
 `metadb` executable there:
 
 [source,bash]
